[package]
name = "plin"
version = "0.1.0"
authors = ["Tatounee <oettam32@gmail.com>"]
edition = "2018"

[dependencies]
plin_data = {path = "../plin_data"}
reqwest = { version="0.11", features=["json"] }
dotenv = "0.15"
serde = { version="1.0", features=["derive"] }
tokio = { version="1.8", features=["macros", "rt-multi-thread", "sync"] }
serde_json = {version = "1.0", features = ["std"]}
serenity = { version="0.10", default-features=false, features=[
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "cache",
    "standard_framework",
    "framework",
] }
humantime = "2.1"
chrono = "0.4"
dashmap = "4.0"
sys-info = "0.9"
bincode = "1.3.3"
sled = "0.34"
futures = "0.3"

[profile.release]
lto = true
