[package]
name = "plin_data"
version = "0.2.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version="0.10", default-features=false, features=[
    "model",
    "rustls_backend",
] }
serde = {version = "1.0", features = ["derive"]}
bincode = "1.3"
sled = "0.34"
futures = "0.3"
